<resources>
    <string name="app_name">书柜</string>
    <string name="action_settings">Settings</string>
    <string name="left_of_top_Bar">标题栏左边按钮</string>

    <string name="activity_book_list">分类书单</string>
    <string name="activity_book_detail">购买</string>
    <string name="activity_book_recommend">热门活动</string>
    <string name="activity_order_confirm">确认订单</string>
    <string name="activity_book_kind_list">科技</string>
    <string name="activity_geek">达人</string>
    <string name="activity_geeks">达人推荐</string>
    <string name="activity_book_introduction">书籍</string>
    <string name="activity_article">介绍文章</string>
    <string name="activity_result">支付结果</string>
    <string name="activity_discount">优惠信息</string>
    <string name="activity_scan">扫描书籍</string>
    <string name="activity_add_book">添加书籍</string>
    <string name="activity_search">查询书籍</string>
    <string name="activity_add_book_result">查询结果</string>



    <string name="first_title">Comprehensive</string>
    <string name="first_desc">We collect the best pieces from around the web and combine them into a story</string>
    <string name="second_title">Twice a day</string>
    <string name="second_desc">Top stories delivered yo you twice daily at times you choose</string>
    <string name="third_title">Definitive</string>
    <string name="third_desc">We surface the most important need-to-know news</string>
    <string name="article">站在峡谷之间的吊桥上，站在满月的光辉里，我们呼唤你上来，来看那高悬在天上的月光，你却微笑拒绝了。斜倚在吊桥的另一端，在山壁的暗处，你说：“我从这里看你们就好了，因为，你们就包含了月光。”山风习习，流水在转折处呻吟喘息，身旁的H为了这样美的一句话轻声惊叫起来。月华如水也如酒，清澈而又迷离，为什么此刻我的心中却隐隐作痛呢？是因为在那样透明的月光之中感觉到自身的有所隐藏吗？是因为在那样圆满的一轮清辉之中感觉到自身的缺失与憾限吗？仿佛有一种畏惧，如影随形。年轻的时候，心中的阴影来自那对前路的茫然无知，我会遇见什么？我会变成什么？一切都没有启示与征兆。</string>
    <!--**************************************************MarketFragment*******************************************************-->





    <!--**************************************************CaseFragment*******************************************************-->
    <!--menu-->
    <string name="text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020我们真的一起去看世界了，足迹遍布40多个国家。\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020即使是带着老的小的一大家子人，我们也会营造属于两个人的特殊时刻。在南太平洋的白沙滩上漫步，在圣彼得堡的涅瓦河边喝着咖啡度过白夜，在意大利阿马尔菲海岸的悬崖上眺望地中海，在印度泰姬陵的水池边欣赏白色宫殿的倒影，在马赛马拉大草原的早晨看薄雾中的象群，在阿尔卑斯雪山下听贝多芬的交响乐，或是在欧洲最西端、葡萄牙里斯本的罗卡角诵读石碑上的诗文“陆止于此，海始于斯”⋯⋯不同的风景点亮我的眼神，我也用这眼神发现熟悉又新鲜的他。\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020钱锺书曾经说过：“如果你爱一个人，那就和她去旅行，如果旅行后你们仍然相爱，那就结婚吧。”旅行最能考验一个人的品性和两个人的配合程度，旅行中的小小冒险也给二人世界带来难忘的记忆。有一次我们去南非旅行，他预订了一个帐篷旅馆，就驻扎在自然保护区的河岸上。\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020夜晚来临，鳄鱼拍打着河水，河马的咆哮就在耳边，大象窸窸窣窣地吃着帐篷外的树叶，与我们只隔着一层帆布。我们关掉灯，屏住呼吸，等待它们踏着沉重的脚步走远⋯⋯第二天清晨我们吃过早饭返回帐篷时，一只大个头的野猪与我们狭路相逢，它晃动着两只獠牙，打量着我们。吴征一把抓住我，把我挡在他的身后，嘱咐我：“不要慌，慢慢后退。”我们给野猪让开一条道，那家伙看我们既无恶意，也不慌张，似乎也定下心来。\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020对峙了一会儿，就大摇大摆地走开了。\n这段遭遇让我们兴奋了好几天。最浪漫的事？那就是周游世界后回到家里，泡一杯热茶，摆一盘瓜子，舒舒服服地一起看碟。金窝银窝，还是自家的小窝好哇。</string>
    <string name="title">世界很大，幸好有你</string>
    <string name="context_menu">Context menu</string>

    <!--Activity-->
    <string name="activity_book">书库</string>
    <string name="activity_charge">交易平台</string>
    <string name="activity_music">乐趣</string>
    <string name="activity_film">影室</string>
    <string name="activity_apply">交易申请</string>
    <string name="activity_applyed">申请交易</string>


    <!--**************************************************MySelfFragment*******************************************************-->
    <string name="user_account_deliver">待发货</string>
    <string name="user_account_receive">待收货</string>
    <string name="user_account_comment">待评价</string>
    <string name="user_account_refund">退款/售后</string>
    <string name="user_account_pay">代付款</string>
    <!--ErrorView-->
    <string name="error_title_damn">Damn</string>
    <string name="error_subtitle_failed_one_more_time">Failed one more time</string>
    <string name="info_retrying">Retrying</string>
    <string name="error_view_oops">Oops</string>
    <string name="error_view_retry">RETRY</string>
    <!--Activity-->
    <string name="activity_shopping_cart">购物车</string>
    <string name="activity_favorites">收藏夹</string>
    <string name="activity_welfare">福利社</string>
    <string name="activity_new_book_come">新书上架</string>
    <string name="activity_express">物流详情</string>
    <string name="activity_my_fortune">我的资产</string>
    <string name="activity_settings">设置</string>
    <string name="activity_address">收货地址</string>
    <string name="activity_add_address">增加收货地址</string>

    <string name="testText">ipt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, utpt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis pt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis pt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis pt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis pt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis  duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit ametipt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit ametipt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit ametipt amet, ut duis lo amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis loLorem ipsum dolor sit amet, ut duis lo</string>
    <string name="comment_word">她内心肯定狂喜着，狂喜着自己去年终于找到了自己的阿拉比……。她狂喜着，太好了，我长大。毫无疑问。</string>
    <string name="suibian">       自张居正去世后，便无人，敢管万历，为争国本，查妖术，打闷棍。上自政事，下至友谊，我就随便线说一说，然后在卡将会加快。</string>

    <string name="strInputSql">请输入SQL语句</string>
    <string name="strErrorSql">执行出错，请检查SQL语句</string>
    <string name="strSuccessSql">执行SQL语句成功</string>
    <string name="strUnableSql">Sorry，还没处理select语句</string>

</resources>
